# potts_lib

./: CMakeLists.txt  README.md
examples/: run_model.cpp
src/: PottsModel.cpp  PottsModel.h  PottsModelInterface.cpp  PottsModelInterface.h  PottsModelRandom.cpp  PottsModelRandom.h  potts.h
